# CG-historic-center

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Face.cpp  Face.h  Model.cpp  Model.h  Point.cpp  Point.h  Texture.h  camera.cpp  historic-center.cpp  point.cpp
.gitignore/: .gitignore
textures/: fancy_couch_pad.psd
